bissl sehr viel

--- a/VORLAGE_ANLEITUNGEN.html
+++ b/VORLAGE_ANLEITUNGEN.html
@@ -26,16 +26,17 @@
                     <img src="/images/WhatsApp Image 2024-09-12 at 21.52.00_203b4ed5.png" alt="stagebox" width="40%">
                     <figcaption></figcaption> */
                 </figure> -->
-                <img src="images/WhatsApp Image 2024-09-12 at 21.52.00_392dd0d8.png" alt="Bühnenteile" width="70%">
+                <img src="images/Layer 0.png" alt="Bühnenteile" width="70%">
             </div>
 
             <div class="text-container">
                 <p>hier text<br>nur wenn man braucht:</p>
-                <ol>
-                    <li>Punkt1</li>
-                    <li>Punlt2</li>
-                    <li>Punkt3</li>
-                    <li>...</li>
+                <ol class="list">
+                    <li>Empfänger Rack</li>
+                    <li>Inventur Barcodes</li>
+                    <li>MAIN OUT</li>
+                    <li>d-Snake</li>
+                    <li>Inputs</li>
                 </ol>
             </div>
         </section>
@@ -43,6 +44,8 @@
         <section class="link-container">
             <div>
                  Hier gehts zur <a href="#">Entwickleranleitung</a>
+                 <br>
+                 <p><!--<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2N7umuRBdK014bDuwREFZS?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> --></p>
             </div>
         </section>
 
@@ -50,6 +53,9 @@
             <div class="footer-left">MTG</div>
             <div class="footer-center">Die Techzyklopedie</div>
             <div class="footer-right">AK-Eventtechnik</div>
+            <div class="footer-bottom">
+                <p>© 2024 AK-Eventtechnik / MTG</p>
+            </div>
         </footer>
     </body>
 </html>
