--- a/VORLAGE_ANLEITUNGEN.html
+++ b/VORLAGE_ANLEITUNGEN.html
@@ -11,7 +11,7 @@
 
         <h2>*Kapitel*</h2>
     
-        <section class="kapitel1">
+        <section class="kapitel">
             <div class="fließtext">
                 <p>
                     Das ist eine Vorlage für einen fließtext in einer Anleitung.
@@ -39,6 +39,22 @@
                     <li>Inputs</li>
                 </ol>
             </div>
+        </section>
+
+        <h2>*Kapitel 2*</h2>
+
+        <section class="kapitel">
+            <p> Hier ist jetzt ein Beispiel für "Kapitel 2" und genau so würde des dann ungefähr aussehen, jetzt mach ich ncoh so eine liste,
+                damit dass hier sinn ergibt, wenn ich ja heir was von der Stagebox erklären würde rein theoretisch. <br> also gneau jetzt kommt hier glecih eine liste:
+            </p>
+            <ol class="list">
+                <li>Im Empfänger Rack sind die ganzen Empfänger halt hä, also die dinger die so die signale vopn unseren funkmikrofonen empfagen</li>
+                <li>Die Inventur Barcodes wissen wir selbst nicht so genau was die sind, weil das ganze system ned von uns gemacht wurde... musss man mal lenny
+                    fragen wahrscheinlich</li>
+                <li>Ja da geht halt Sound raus zum SUB nh</li>
+                <li>so daten kabel für mischpult</li>
+                <li>sound rein zu gerät un ddann wieder raus zu sub</li>
+            </ol>
         </section>
 
         <section class="link-container">
