--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Die Techzyklopedie </title>
         <link rel="stylesheet" href="style.css">
     </head>
-
+<!--   hallodfkdkj-->
     <body>
         <header class="kopf">
             <!--<nav>
