--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="Pläne.hmtl" class="box">Pläne</a>
              </section>
         </main>
-
+        <!--lkjdfsldflskfd-->
         <footer class="footer">
             <div class="footer-left">MTG</div>
             <div class="footer-center">Die Techzyklopedie</div>
