--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </ul>
             </nav> -->
             <h1>Die Techzyklopedie</h1>
-            <p class="kopf-text">Willkommen bei der Techzyklopedie bla bla text generelle info</p>
-        </header>
+           </header>
+         <p class="kopf-text">Willkommen bei der Techzyklopedie bla bla text generelle info</p>
         
         <main>
             <section class="welcome-section" >
@@ -36,7 +36,7 @@
                 <a href="Pläne.hmtl" class="box">Pläne</a>
              </section>
         </main>
-        <!--lkjdfsldflskfd-->
+        <!--lkjdf-->
         <footer class="footer">
             <div class="footer-left">MTG</div>
             <div class="footer-center">Die Techzyklopedie</div>
