--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
             <!-- Boxen mit Links zu anderen HTML-Seiten-->
              <section class="boxes">
-                <a href="Anleitungen.hmtl" class="box" id="anleitungen">Anleitungen</a>
-                <a href="Techzyklopedie.hmtl" class="box" id="Techzyklopedie">Die Techzyklopedie</a>
-                <a href="Pläne.hmtl" class="box" id="Pläne">Pläne</a>
+                <a href="pages/Anleitungen.html" class="box" id="anleitungen">Anleitungen</a>
+                <a href="pages/Techzyklopedie.html" class="box" id="Techzyklopedie">Die Techzyklopedie</a>
+                <a href="Pages/Pläne.hmtl" class="box" id="Pläne">Pläne</a>
              </section>
         </main>
         <!--lkjdf-->
