--- a/pages/Anleitungen.html
+++ b/pages/Anleitungen.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
-    hier sind anleitungen
-    
+    <head>
+        <title>Anleitungen</title>
+        <link rel="stylesheet" href="../style.css">
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <main>
+            <section class="welcome-section" >
+                <h2>Anleitungen</h2>
+            </section>
+            <section class="boxes">
+                <a href="Lichtpult.html" class="box" id="Lichtpult">Lichtpult</a>
+            </section>
+        </main>
+    </body>
+
 </html>
