--- a/pages/Anleitungen.html
+++ b/pages/Anleitungen.html
@@ -12,6 +12,8 @@
             </section>
             <section class="boxes">
                 <a href="Lichtpult.html" class="box" id="Lichtpult">Lichtpult</a>
+                <a href="stagebox.html" class="box" id="anleitungen">Stagebox</a>
+            
             </section>
         </main>
     </body>
