--- a/VORLAGE_ANLEITUNGEN.html
+++ b/VORLAGE_ANLEITUNGEN.html
@@ -7,6 +7,18 @@
     </head>
 
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/Anleitungen.html">Anleitungen</a>                    <ul>
+                        <li><a href="pages/Lichtpult.html">Lichtpult</a></li>
+                        <li><a href="pages/stagebox.html">Stagebox</a></li>
+                    </ul>
+                </li>
+                <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
+                <li><a href="pages/Pläne.html">Pläne</a></li>
+            </ul>
+        </nav>
         <h1>Stagebox</h1>
 
         <h2>Was???</h2>
