--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     </head>
 <!--   hallodfkdkj-->
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/Anleitungen.html">Anleitungen</a>                    <ul>
+                        <li><a href="pages/Lichtpult.html">Lichtpult</a></li>
+                        <li><a href="pages/stagebox.html">Stagebox</a></li>
+                    </ul>
+                </li>
+                <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
+                <li><a href="pages/Pläne.html">Pläne</a></li>
+            </ul>
+        </nav>
         <header class="kopf">
-            <!--<nav>
-                <ul>
-                    <li><a href="pages/Techzyklopedie.html">Book</a></li>
-                    <li><a href="pages/Anleitungen.html">Anleitungen</a></li>
-                    <li class="mobile"><a href="pages/Pläne.html">Pläne</a></li>
-                    <li class="mobile"><a href="pages/Verhaltensregeln.html">Verhaltensregeln</a></li>
-                    <li class="logo"><a href="index.html">chocolatte</a></li>
-                    <li class="desktop"><a href="pages/Pläne.html">Pläne</a></li>
-                    <li class="desktop"><a href="pages/Verhaltensregeln.html">Verhaltensregeln</a></li>
-                </ul>
-            </nav> -->
+            
             <h1>Die Techzyklopedie</h1>
            </header>
          <p class="kopf-text">Willkommen bei der Techzyklopedie bla bla text generelle info</p>
