--- a/pages/Anleitungen.html
+++ b/pages/Anleitungen.html
@@ -6,6 +6,18 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="pages/Anleitungen.html">Anleitungen</a>                    <ul>
+                        <li><a href="pages/Lichtpult.html">Lichtpult</a></li>
+                        <li><a href="pages/stagebox.html">Stagebox</a></li>
+                    </ul>
+                </li>
+                <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
+                <li><a href="pages/Pläne.html">Pläne</a></li>
+            </ul>
+        </nav>
         <main>
             <section class="welcome-section" >
                 <h2>Anleitungen</h2>
