--- a/pages/Lichtpult.html
+++ b/pages/Lichtpult.html
@@ -12,12 +12,12 @@
                 <li><a href="../index.html">Home</a></li>
                 
                 <li><a href="pages/Anleitungen.html">Anleitungen</a>                    <ul>
-                        <li><a href="pages/Lichtpult.html">Lichtpult</a></li>
-                        <li><a href="pages/stagebox.html">Stagebox</a></li>
+                        <li><a href="Lichtpult.html" class="active">Lichtpult</a></li>
+                        <li><a href="stagebox.html">Stagebox</a></li>
                     </ul>
                 </li>
-                <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
-                <li><a href="pages/Pläne.html">Pläne</a></li>
+                <li><a href="Techzyklopedie.html">Techzyklopedie</a></li>
+                <li><a href="Pläne.html">Pläne</a></li>
             </ul>
         </nav>
         <h1>Lichtpult</h1>
