--- a/pages/Techzyklopedie.html
+++ b/pages/Techzyklopedie.html
@@ -13,7 +13,7 @@
                         <li><a href="pages/stagebox.html">Stagebox</a></li>
                     </ul>
                 </li>
-                <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
+                <li><a href="pages/Techzyklopedie.html" class="active">Techzyklopedie</a></li>
                 <li><a href="pages/Pläne.html">Pläne</a></li>
             </ul>
         </nav>
