--- a/pages/stagebox.html
+++ b/pages/stagebox.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>*Doc. Name*</title>
-        <link rel="stylesheet" href="VORLAGE_ANLEITUNGEN.css">
+        <link rel="stylesheet" href="../VORLAGE_ANLEITUNGEN.css">
         <meta charset="UTF-8">
     </head>
 
@@ -13,7 +13,7 @@
                 
                 <li><a href="pages/Anleitungen.html">Anleitungen</a>                    <ul>
                         <li><a href="pages/Lichtpult.html">Lichtpult</a></li>
-                        <li><a href="pages/stagebox.html">Stagebox</a></li>
+                        <li><a href="pages/stagebox.html" class="active">Stagebox</a></li>
                     </ul>
                 </li>
                 <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
