--- a/pages/Anleitungen.html
+++ b/pages/Anleitungen.html
@@ -9,13 +9,13 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="pages/Anleitungen.html">Anleitungen</a>                    <ul>
-                        <li><a href="pages/Lichtpult.html">Lichtpult</a></li>
-                        <li><a href="pages/stagebox.html">Stagebox</a></li>
+                <li><a href="Anleitungen.html" class="active">Anleitungen</a>                    <ul>
+                        <li><a href="Lichtpult.html">Lichtpult</a></li>
+                        <li><a href="stagebox.html">Stagebox</a></li>
                     </ul>
                 </li>
-                <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
-                <li><a href="pages/Pläne.html">Pläne</a></li>
+                <li><a href="Techzyklopedie.html">Techzyklopedie</a></li>
+                <li><a href="Pläne.html">Pläne</a></li>
             </ul>
         </nav>
         <main>
