--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              <section class="boxes">
                 <a href="pages/Anleitungen.html" class="box" id="anleitungen">Anleitungen</a>
                 <a href="pages/Techzyklopedie.html" class="box" id="Techzyklopedie">Die Techzyklopedie</a>
-                <a href="Pages/Pläne.hmtl" class="box" id="Pläne">Pläne</a>
+                <a href="pages/Plaene.html" class="box" id="Pläne">Pläne</a>
              </section>
         </main>
         <!--lkjdf-->
