--- a/pages/Anleitungen.html
+++ b/pages/Anleitungen.html
@@ -11,8 +11,8 @@
                 <h2>Anleitungen</h2>
             </section>
             <section class="boxes">
-                <a href="Lichtpult.html" class="box" id="Lichtpult">Lichtpult</a>
-                <a href="stagebox.html" class="box" id="anleitungen">Stagebox</a>
+                <a href="/pages/Anleitungen/Lichtpult.html" class="box" id="Lichtpult">Lichtpult</a>
+                <a href="/pages/Anleitungen/stagebox.html" class="box" id="anleitungen">Stagebox</a>
             
             </section>
         </main>
