--- a/pages/Anleitungen/Lichtpult.html
+++ b/pages/Anleitungen/Lichtpult.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Lichtpult</title>
-        <link rel="stylesheet" href="../VORLAGE_ANLEITUNGEN.css">
+        <link rel="stylesheet" href="VORLAGE_ANLEITUNGEN.css">
         <meta charset="UTF-8">
     </head>
 
@@ -28,7 +28,7 @@
         <section class="image-and-text">
             <div class="image-container">
                 <figure>
-                    <img src="../images/lichtpult.jpg" alt="Lichtpult" width="70%">
+                    <img src="/images/lichtpult.jpg" alt="Lichtpult" width="70%">
                 </figure>
                 
             </div>
