--- a/pages/Anleitungen/stagebox.html
+++ b/pages/Anleitungen/stagebox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>*Doc. Name*</title>
+        <title>Anleitung Stagebox</title>
         <link rel="stylesheet" href="VORLAGE_ANLEITUNGEN.css">
         <meta charset="UTF-8">
     </head>
@@ -35,7 +35,7 @@
                     <img src="/images/WhatsApp Image 2024-09-12 at 21.52.00_203b4ed5.png" alt="stagebox" width="40%">
                     <figcaption></figcaption> */
                 </figure> -->
-                <img src="images/Layer 0.png" alt="Bühnenteile" width="70%">
+                <img src="/images/layer 0.png" alt="Stagebox" width="70%">
             </div>
 
             <div class="text-container">
