--- a/pages/Anleitungen/stagebox.html
+++ b/pages/Anleitungen/stagebox.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-HEAD:pages/Anleitungen/stagebox.html
         <title>Anleitung Stagebox</title>
         <link rel="stylesheet" href="VORLAGE_ANLEITUNGEN.css">
 
         <title>*Doc. Name*</title>
         <link rel="stylesheet" href="../VORLAGE_ANLEITUNGEN.css">
->>>>>>> 5f80ddf3e34976905bd1e859b3e348d61dc484c0:pages/stagebox.html
+
         <meta charset="UTF-8">
     </head>
 
     <body>
-        <nav>
+        <!--<nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 
@@ -24,7 +23,7 @@ HEAD:pages/Anleitungen/stagebox.html
                 <li><a href="pages/Techzyklopedie.html">Techzyklopedie</a></li>
                 <li><a href="pages/Pläne.html">Pläne</a></li>
             </ul>
-        </nav>
+        </nav> -->
         <h1>Stagebox</h1>
 
         <h2>Was???</h2>
