was du gesagt hast

--- a/VORLAGE_ANLEITUNGEN.html
+++ b/VORLAGE_ANLEITUNGEN.html
@@ -91,12 +91,16 @@
         </section>
 
         <footer class="footer">
-            <div class="footer-left">MTG</div>
-            <div class="footer-center">Die Techzyklopedie</div>
-            <div class="footer-right">AK-Eventtechnik</div>
-            <div class="footer-bottom">
-                <p>© 2024 AK-Eventtechnik / MTG</p>
-            </div>
+            <div class="left">
+                <p>MTG</p>
+            </div>  
+            <div class="center">  
+                <p>Die Techzyklopedie</p>
+                <p style="color:rgb(162, 162, 162)">© 2024 AK-Eventtechnik / MTG</p>
+            </div>    
+            <div class="right">
+               <p>AK-Eventtechnik</p> 
+            </div>  
         </footer>
     </body>
 </html>
