--- a/index.html
+++ b/index.html
@@ -51,13 +51,18 @@
              </section>
         </main>
         <!--lkjdf-->
-        <footer class="footer">
-            <div class="footer-left">MTG</div>
-            <div class="footer-center">Die Techzyklopedie</div>
-            <div class="footer-right">AK-Eventtechnik</div>
-            <div class="footer-bottom">
+        <footer>
+            <div class="left">
+                <p>MTG</p>
+            </div>  
+            <div class="center">  
+                <p>Die Techzyklopedie</p>
                 <p>© 2024 AK-Eventtechnik / MTG</p>
-            </div>
+            </div>    
+            <div class="right">
+               <p>AK-Eventtechnik</p> 
+            </div>   
+            
         </footer>
     </body>
 </html>
