--- a/pages/Anleitungen/stagebox.html
+++ b/pages/Anleitungen/stagebox.html
@@ -94,14 +94,17 @@
                  <p><!--<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2N7umuRBdK014bDuwREFZS?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> --></p>
             </div>
         </section>
-
         <footer class="footer">
-            <div class="footer-left">MTG</div>
-            <div class="footer-center">Die Techzyklopedie</div>
-            <div class="footer-right">AK-Eventtechnik</div>
-            <div class="footer-bottom">
-                <p>© 2024 AK-Eventtechnik / MTG</p>
-            </div>
+            <div class="left">
+                <p>MTG</p>
+            </div>  
+            <div class="center">  
+                <p>Die Techzyklopedie</p>
+                <p style="color:rgb(162, 162, 162)">© 2024 AK-Eventtechnik / MTG</p>
+            </div>    
+            <div class="right">
+               <p>AK-Eventtechnik</p> 
+            </div>  
         </footer>
     </body>
 </html>
