--- a/pages/Anleitungen/Lichtpult.html
+++ b/pages/Anleitungen/Lichtpult.html
@@ -88,13 +88,17 @@
             </div>
         </section>
 
-        <footer class="footer">
-            <div class="footer-left">MTG</div>
-            <div class="footer-center">Die Techzyklopedie</div>
-            <div class="footer-right">AK-Eventtechnik</div>
-            <div class="footer-bottom">
-                <p>© 2024 AK-Eventtechnik / MTG</p>
-            </div>
+        <footer class="footer"></footer>
+            <div class="left">
+                <p>MTG</p>
+            </div>  
+            <div class="center">  
+                <p>Die Techzyklopedie</p>
+                <p style="color:rgb(162, 162, 162)">© 2024 AK-Eventtechnik / MTG</p>
+            </div>    
+            <div class="right">
+               <p>AK-Eventtechnik</p> 
+            </div>  
         </footer>
     </body>
 </html>
