--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
              </section>
         </main>
         <!--lkjdf-->
-        <footer>
+        <!--<footer>
             <div class="left">
                 <p>MTG</p>
             </div>  
@@ -63,6 +63,14 @@
                <p>AK-Eventtechnik</p> 
             </div>   
             
+        </footer>-->
+        <footer class="footer"></footer>
+            <div class="footer-left">MTG</div>
+            <div class="footer-center">Die Techzyklopedie</div>
+            <div class="footer-right">AK-Eventtechnik</div>
+            <div class="footer-bottom">
+                <p>© 2024 AK-Eventtechnik / MTG</p>
+            </div>
         </footer>
     </body>
 </html>
