--- a/pages/Anleitungen/stagebox.html
+++ b/pages/Anleitungen/stagebox.html
@@ -100,7 +100,7 @@
             </div>  
             <div class="center">  
                 <p>Die Techzyklopedie</p>
-                <p style="color:rgb(162, 162, 162)">© 2024 AK-Eventtechnik / MTG</p>
+                <p style="color:#777e85">© 2024 AK-Eventtechnik / MTG</p>
             </div>    
             <div class="right">
                <p>AK-Eventtechnik</p> 
