--- a/pages/Anleitungen.html
+++ b/pages/Anleitungen.html
@@ -10,8 +10,9 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="Anleitungen.html" class="active">Anleitungen</a>                    <ul>
-                        <li><a href="Lichtpult.html">Lichtpult</a></li>
-                        <li><a href="stagebox.html">Stagebox</a></li>
+                        <li><a href="Anleitungen/Lichtpult.html">Lichtpult</a></li>
+                        <li><a href="Anleitungen/stagebox.html">Stagebox</a></li>
+                        <li><a href="Anleitungen/Bühne.html">Bühne</a></li>
                     </ul>
                 </li>
                 <li><a href="Techzyklopedie.html">Techzyklopedie</a></li>
