--- a/pages/Anleitungen/Bühne.html
+++ b/pages/Anleitungen/Bühne.html
@@ -40,8 +40,8 @@
                         <li>Bühnenwagen bzw. Bühnenteile mit Plastikclips</li>
                         <li>Beine</li>
                         <li>Verbindungsstücke (metall)</li>
-                        <li>evtl. Molton</li>
                     </ul>
+                    <br><br>
                 </p>
             </div>  
         </section>
@@ -52,20 +52,17 @@
             <h5>Planung</h5>
             <div class="text-container">
                 <p>
-                    Bevor du mit dem richtigen aufbauen beginnst mach dir erstmal Gedanken wie groß die Bühne überhaupt werden soll bzw. wo genau sie am Besten stehen wird.
-                    Ein wichtiges Kriterium dafür ist natürlich für welchen Zweck die Bühne verwendet werden soll aber auch die für uns verfügbare Zeit (sowohl für Aufbau als auch Abbau).
-                    Dies ist wichtig um im Vorfeld zu wissen wie viele Bühnenteile bzw. Bühnenwägen benötigt werden. Außerdem sucht man noch die Beinhöhe aus (obwohl meist die größere verwendet wird) und ob Molton drankommt.
+                    Bevor du mit dem richtigen aufbauen beginnst mach dir erstmal Gedanken wie <b>groß</b> die Bühne überhaupt werden soll bzw. <b>wo</b> genau sie am Besten stehen wird.
+                    Ein wichtiges Kriterium dafür ist natürlich für welchen Zweck die Bühne verwendet wird aber auch die für uns verfügbare Zeit (sowohl für Aufbau als auch Abbau).
+                    Dies ist wichtig um im Vorfeld zu wissen wie viele Bühnenteile bzw. Bühnenwägen benötigt werden. (Es gibt auch eine kleinere Beinhöhe, die wir aber selten verwenden).
                 </p>
             </div>
-            <div class="image-container">
+            <!--<div class="image-container">
                 <img src="../../images/bühnenwagen.png" alt="Bühnenwagen" width="70%">
-            </div>
+            </div>-->
             <div class="text-container">
-                <p>
-                    Im nächsten Schritt werden die Bühnenwägen geholt und zusammen mit den Beinen bereitgelegt.
-                </p>
 
-                    <br><br><br><p></p>
+                    <br><br>
                     
             </div>   
         </section>
@@ -74,13 +71,14 @@
             <h5>praktisch</h5>
             <div class="text-container">
                 <p>
-                    Nun beginnt man damit die Bühnenteile mit der (nicht aus rücken heben zu zweit)
+                    Im nächsten Schritt werden die Bühnenwägen geholt und zusammen mit den Beinen bereitgelegt. Wie man diese zusammenbaut könnt ihr <a href="bühenteile">hier</a> nachlesen.
                 </p>
                 <p>
-                    beine dran
-                </p>
-                <p>
-                    richtig hinstellen (plastikdinger) + befestigen
+                    Während Bühnenteile aufgebaut werden kann man auch schon mit dem zusammenfügen beginnen. Dabei muss aber auf die Position der einzelnen Bühnenteile geachtet werden. Es gibt:
+                    <ul>
+                        <li>vordere Eckteile, die keine Plastikclips haben</li>
+                        <li>seitliche Teile, die meist ein Plastikclip haben</li>
+                    </ul>
                 </p>
                 <p>
                     metallsicherung dran und sonstiges(molton, Stufen, geländer)
