--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
             </div>   
             
         </footer>-->
-        <footer class="footer"></footer>
-            <div class="footer-left">MTG</div>
-            <div class="footer-center">Die Techzyklopedie</div>
-            <div class="footer-right">AK-Eventtechnik</div>
-            <div class="footer-bottom">
-                <p>© 2024 AK-Eventtechnik / MTG</p>
+        <footer class="footer">
+            <div class="firstfooter">
+                <div class="footer-left">MTG</div>
+                <div class="footer-center">Die Techzyklopedie</div>
+                <div class="footer-right"><a href="https://www.instagram.com/ak.technik?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="images/insta.png" alt="insta">. AK-Eventtechnik</a></div>
+            </div>
+            <div class="secondfooter">
+                <div class="footer-bottom">© 2024 AK-Eventtechnik / MTG</div>
+            
             </div>
         </footer>
     </body>
